# monitor

./: .gitignore  TODO.md  TREE.md
system_monitor/: Cargo.toml
system_monitor/src/: lib.rs  main.rs
system_monitor/src/app/: cpu.rs  memory.rs  mod.rs  network.rs  process.rs  sensors.rs  system.rs
system_monitor/src/models/: cpu.rs  memory.rs  mod.rs  network.rs  process.rs  sensors.rs  system.rs
system_monitor/src/utils/: formater.rs  get_tasks.rs  mod.rs  parser.rs  process.rs  read.rs  sensors.rs
system_monitor/ui/: app-window.slint  dashboard_box.slint  dashboard_monitors.slint  dashboard_theme.slint  data_types.slint  header.slint  memory_tap.slint  network_tab.slint  sidebar.slint  system_tab.slint
system_monitor/ui/components/: graphic_view.slint  tab_custum.slint
version0/: app-window.slint.txt  process.rs  tasks_tab.slint.txt
