[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
pnet = "0.35.0"
slint = "1.8.0"
sysinfo = "0.34.2"

[build-dependencies]
slint-build = "1.8.0"
