[package]
name = "system_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
libc = "0.2.171"
log = "0.4.27"
pnet = "0.35.0"
procfs = "0.17.0"
slint = "1.8.0"
sysinfo = "0.34.2"

[build-dependencies]
slint-build = "1.8.0"
